fix: change z-index for better tooltip view

--- a/online-zoo/pages/zoos/panda/style.css
+++ b/online-zoo/pages/zoos/panda/style.css
@@ -213,6 +213,7 @@ html {
   padding: 16px 10px;
   background: linear-gradient(315.75deg, rgba(254, 210, 144, 0.7) 30.06%, #FEBDAB 100.95%, rgba(254, 210, 144, 0.7) 106.36%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%), linear-gradient(315.75deg, rgba(254, 189, 171, 0.74) 30.06%, rgba(243, 169, 248, 0.66) 50.74%, #E0D8F0 80.49%, #EAF7FE 127.9%, #EAF7FE 149.54%);
   border-radius: 5px;
+  z-index: 200;
 }
 
 .zoos-sidebar__animal {
